<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.FormularioActivity"
    android:padding="4dp">
    <EditText
        android:id="@+id/etNombre"
        android:hint="@string/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/etApellido"
        android:hint="@string/apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etNombre"
        android:layout_marginTop="4dp"/>
    <EditText
        android:id="@+id/etTelefono"
        android:hint="@string/telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etApellido"
        android:layout_marginTop="4dp"/>
    <EditText
        android:id="@+id/etCorreo"
        android:hint="@string/correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTelefono"
        android:layout_marginTop="4dp"/>
    <EditText
        android:id="@+id/etOcupacion"
        android:hint="@string/ocupacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCorreo"
        android:layout_marginTop="4dp"/>

    <Button
        android:id="@+id/btnGuardar"
        android:text="@string/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOcupacion"
        android:layout_marginTop="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>